// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Notification Custom color 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#00CC00",
      "borderRadius": 10,
      "height": 10,
      "width": 10,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontSize": 28,
          "fontWeight": "700",
        },
        Object {
          "fontSize": 5,
          "textAlign": "center",
        },
      ]
    }
  />
</View>
`;

exports[`Storyshots Notification Custom height 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FF7043",
      "borderRadius": 16,
      "height": 16,
      "width": 16,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontSize": 28,
          "fontWeight": "700",
        },
        Object {
          "fontSize": 11,
          "textAlign": "center",
        },
      ]
    }
  />
</View>
`;

exports[`Storyshots Notification Default 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FF7043",
      "borderRadius": 10,
      "height": 10,
      "width": 10,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontSize": 28,
          "fontWeight": "700",
        },
        Object {
          "fontSize": 5,
          "textAlign": "center",
        },
      ]
    }
  />
</View>
`;

exports[`Storyshots Notification With label 1`] = `
<View
  style={
    Object {
      "backgroundColor": "#FF6A6A",
      "borderRadius": 18,
      "height": 18,
      "width": 18,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontSize": 28,
          "fontWeight": "700",
        },
        Object {
          "fontSize": 13,
          "textAlign": "center",
        },
      ]
    }
  >
    1
  </Text>
</View>
`;
